--- a/StoreFront.UI.MVC/Views/Home/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Home/Index.cshtml
@@ -11,23 +11,24 @@
             </a>
             <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
                 <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
-                    <div class="nav-item dropdown">
+                    @*<div class="nav-item dropdown">
                         <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
                         <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
                             <a href="" class="dropdown-item">Men's Dresses</a>
                             <a href="" class="dropdown-item">Women's Dresses</a>
                             <a href="" class="dropdown-item">Baby's Dresses</a>
                         </div>
-                    </div>
-                    <a href="" class="nav-item nav-link">Shirts</a>
-                    <a href="" class="nav-item nav-link">Jeans</a>
-                    <a href="" class="nav-item nav-link">Swimwear</a>
-                    <a href="" class="nav-item nav-link">Sleepwear</a>
-                    <a href="" class="nav-item nav-link">Sportswear</a>
-                    <a href="" class="nav-item nav-link">Jumpsuits</a>
-                    <a href="" class="nav-item nav-link">Blazers</a>
-                    <a href="" class="nav-item nav-link">Jackets</a>
-                    <a href="" class="nav-item nav-link">Shoes</a>
+                    </div>*@
+                    <a href="" class="nav-item nav-link">Handlebars</a>
+                    <a href="" class="nav-item nav-link">Wheels</a>
+                    <a href="" class="nav-item nav-link">Tires</a>
+                    <a href="" class="nav-item nav-link">Brakes</a>
+                    <a href="" class="nav-item nav-link">Suspension</a>
+                    <a href="" class="nav-item nav-link">Pedals</a>
+                    <a href="" class="nav-item nav-link">Saddles</a>
+                    <a href="" class="nav-item nav-link">Drivetrain</a>
+                    <a href="" class="nav-item nav-link">Seatpost</a>
+                    <a href="" class="nav-item nav-link">Maintenance</a>
                 </div>
             </nav>
         </div>
@@ -66,7 +67,7 @@
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
                                 <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Dis Mountain Bike</h3>
+                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Shop For This Bike</h3>
                                 <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
                             </div>
                         </div>
@@ -76,7 +77,7 @@
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 700px;">
                                 <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Or Dis MTN BIKE</h3>
+                                <h3 class="display-4 text-white font-weight-semi-bold mb-4">Or This MTN BIKE</h3>
                                 <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
                             </div>
                         </div>
@@ -131,33 +132,33 @@
 <div class="container-fluid pt-5">
     <div class="row px-xl-5 pb-3">
         <div class="col-lg-4 col-md-6 pb-1">
-            <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
+            <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px; height: 500px; ">
                 <p class="text-right">15 Products</p>
                 <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                    <img class="img-fluid" src="~/img/cat-1.jpg" alt="">
+                    <img class="img-fluid" src="~/img/BikeTire-square.jpg" alt="">
                 </a>
-                <h5 class="font-weight-semi-bold m-0">Men's dresses</h5>
+                <h5 class="font-weight-semi-bold m-0">Tires</h5>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 pb-1">
-            <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
+            <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px; height: 500px;">
                 <p class="text-right">15 Products</p>
                 <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                    <img class="img-fluid" src="~/img/cat-2.jpg" alt="">
+                    <img class="img-fluid" src="~/img/BikeShock-square.jpg" alt="">
                 </a>
-                <h5 class="font-weight-semi-bold m-0">Women's dresses</h5>
+                <h5 class="font-weight-semi-bold m-0">Suspension</h5>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 pb-1">
-            <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
+            <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px; height: 500px;">
                 <p class="text-right">15 Products</p>
                 <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                    <img class="img-fluid" src="~/img/cat-3.jpg" alt="">
+                    <img class="img-fluid" src="~/img/BikePedal-Square.jpg" alt="">
                 </a>
-                <h5 class="font-weight-semi-bold m-0">Baby's dresses</h5>
+                <h5 class="font-weight-semi-bold m-0">Pedals</h5>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 pb-1">
+       @* <div class="col-lg-4 col-md-6 pb-1">
             <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                 <p class="text-right">15 Products</p>
                 <a href="" class="cat-img position-relative overflow-hidden mb-3">
@@ -183,7 +184,7 @@
                 </a>
                 <h5 class="font-weight-semi-bold m-0">Shoes</h5>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 <!-- Categories End -->
