--- a/StoreFront.UI.MVC/Views/Home/Detail.cshtml
+++ b/StoreFront.UI.MVC/Views/Home/Detail.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "Detail";
+    ViewData["Title2"] = "Product Details";
 }
 @section NavBarClass {
     <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
