--- a/StoreFront.UI.MVC/Views/Products/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Details.cshtml
@@ -1,8 +1,13 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Product Details";
+    ViewData["Title2"] = "Product Details";
 }
+
+@section NavBarClass {
+    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+    }
 
 <h1>Details</h1>
 
